--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,74 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div>
+    Allô bonjour c'est l'index
+</div>
+
+<div>Lorem ipsum 1 dolor sit amet consectetur, adipisicing elit. Ab, quaerat reprehenderit, quisquam minima saepe
+    dignissimos nisi suscipit assumenda, quibusdam possimus adipisci maiores iure laborum expedita necessitatibus alias?
+    Voluptas, nihil tempore.</div>
+
+<div>Lorem ipsum *5 dolor sit amet consectetur adipisicing elit. Soluta, dolores. Necessitatibus sapiente fugit itaque
+    voluptatem obcaecati temporibus pariatur expedita, ratione consequuntur cum, aliquid fugiat reprehenderit
+    repellendus repellat id eum quo!
+    Nostrum similique hic, unde autem molestias laborum error nemo amet sapiente commodi ea iusto numquam? Harum quidem
+    labore iure magni nobis, fuga laborum explicabo, rem autem, in saepe voluptatum. Quaerat?
+    Laborum aperiam ab mollitia aliquam harum magnam quisquam? Cum veniam in praesentium veritatis quae suscipit aperiam
+    doloribus aspernatur! Molestias inventore, maxime harum vitae odit aspernatur praesentium accusantium distinctio
+    culpa tempora.
+    Beatae incidunt fuga perspiciatis labore, dolorem minima! Eligendi enim unde quam, eaque accusamus doloremque
+    officia, pariatur ex illum quod sit magni adipisci? Cupiditate nostrum beatae accusamus expedita ullam, tenetur
+    voluptatum!
+    Et, accusamus unde? Alias atque, qui, aliquid, dolores sunt consequuntur deserunt ipsum quis commodi placeat
+    voluptatum! Architecto cupiditate id aspernatur consequatur esse hic facere nam. Omnis facere maiores necessitatibus
+    asperiores?</div>
+<div>Lorem ipsum *10 dolor sit amet consectetur adipisicing elit. Dicta omnis, tenetur magni sint facere repudiandae sed
+    aliquam quidem, velit a natus vitae similique, rerum ipsa modi qui quis deleniti! Eaque!
+    Earum sint aliquam facere, necessitatibus eum maxime corporis itaque fugiat voluptates est velit ipsam saepe fuga
+    inventore ullam esse vitae tempore totam provident sed consectetur aut, eius cupiditate? Dolorem, est.
+    Illo nulla soluta, odit fugit reiciendis recusandae? Dolor esse, aperiam harum assumenda asperiores voluptatum!
+    Neque sapiente rerum illo earum sequi optio mollitia aliquid id, aut ea quas nulla dolorem corrupti.
+    Cupiditate veniam distinctio quibusdam odio perspiciatis, id aliquid? Error blanditiis reprehenderit ratione
+    laboriosam est dolore tenetur quisquam voluptatibus iure itaque, facilis distinctio accusantium quidem eos velit
+    fugit repellendus autem esse!
+    Odit quis laboriosam mollitia necessitatibus. Praesentium, reprehenderit mollitia? Nihil, voluptates! Veniam, odit
+    dicta? Itaque ab quidem unde porro reiciendis alias, amet excepturi dignissimos! Officia nobis at sit, iste
+    assumenda ut?
+    Laborum dolor ducimus ad maiores mollitia non tempora voluptatibus modi? Perferendis, omnis consequuntur, laborum
+    corporis libero rem esse voluptatibus veritatis debitis laboriosam dolorem quibusdam non ea at aspernatur nostrum
+    facere.
+    Doloremque delectus iste obcaecati deserunt ipsa accusantium maxime sapiente, repudiandae iure sunt neque
+    exercitationem expedita nesciunt a ducimus asperiores! Minima odio laboriosam excepturi quibusdam necessitatibus
+    quae deserunt tempora dicta maxime.
+    Impedit maxime, cum voluptatum et aperiam iure iste omnis inventore perspiciatis dolorum, animi illo alias expedita
+    reprehenderit vero fuga molestias commodi accusantium. Assumenda vitae ex culpa at recusandae temporibus alias?
+    Deleniti, obcaecati. Aliquam saepe deserunt vitae, rerum architecto culpa minima et rem assumenda quod officiis
+    accusamus quis ipsam aliquid quas possimus unde voluptas beatae. Illum eligendi iure asperiores. Consequatur,
+    facere.
+    Ut ab eius velit quaerat similique dignissimos nisi, voluptate repellendus, provident totam obcaecati accusantium,
+    repellat ducimus omnis? Dolore aperiam minus animi officia, ad delectus laudantium maxime facilis incidunt modi
+    doloribus.</div>
+<div>Lorem ipsum *10 dolor sit amet consectetur adipisicing elit. Dicta omnis, tenetur magni sint facere repudiandae sed
+    aliquam quidem, velit a natus vitae similique, rerum ipsa modi qui quis deleniti! Eaque!
+    Earum sint aliquam facere, necessitatibus eum maxime corporis itaque fugiat voluptates est velit ipsam saepe fuga
+    inventore ullam esse vitae tempore totam provident sed consectetur aut, eius cupiditate? Dolorem, est.
+    Illo nulla soluta, odit fugit reiciendis recusandae? Dolor esse, aperiam harum assumenda asperiores voluptatum!
+    Neque sapiente rerum illo earum sequi optio mollitia aliquid id, aut ea quas nulla dolorem corrupti.
+    Cupiditate veniam distinctio quibusdam odio perspiciatis, id aliquid? Error blanditiis reprehenderit ratione
+    laboriosam est dolore tenetur quisquam voluptatibus iure itaque, facilis distinctio accusantium quidem eos velit
+    fugit repellendus autem esse!
+    Odit quis laboriosam mollitia necessitatibus. Praesentium, reprehenderit mollitia? Nihil, voluptates! Veniam, odit
+    dicta? Itaque ab quidem unde porro reiciendis alias, amet excepturi dignissimos! Officia nobis at sit, iste
+    assumenda ut?
+    Laborum dolor ducimus ad maiores mollitia non tempora voluptatibus modi? Perferendis, omnis consequuntur, laborum
+    corporis libero rem esse voluptatibus veritatis debitis laboriosam dolorem quibusdam non ea at aspernatur nostrum
+    facere.
+    Doloremque delectus iste obcaecati deserunt ipsa accusantium maxime sapiente, repudiandae iure sunt neque
+    exercitationem expedita nesciunt a ducimus asperiores! Minima odio laboriosam excepturi quibusdam necessitatibus
+    quae deserunt tempora dicta maxime.
+    Impedit maxime, cum voluptatum et aperiam iure iste omnis inventore perspiciatis dolorum, animi illo alias expedita
+    reprehenderit vero fuga molestias commodi accusantium. Assumenda vitae ex culpa at recusandae temporibus alias?
+    Deleniti, obcaecati. Aliquam saepe deserunt vitae, rerum architecto culpa minima et rem assumenda quod officiis
+    accusamus quis ipsam aliquid quas possimus unde voluptas beatae. Illum eligendi iure asperiores. Consequatur,
+    facere.
+    Ut ab eius velit quaerat similique dignissimos nisi, voluptate repellendus, provident totam obcaecati accusantium,
+    repellat ducimus omnis? Dolore aperiam minus animi officia, ad delectus laudantium maxime facilis incidunt modi
+    doloribus.</div>
