--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="icon" type="image/png" href="/images/2.png" />
+</head>
+
+<body>
+
+
+
+  <div class="nav">
+    <input type="checkbox" id="nav-check">
+    <div class="nav-header">
+      <div class="nav-title">
+        <a href="#home">CLEMENTINE PARANT <span class="dot dot1"></span>
+          <span class="dot dot2"></span>
+          <span class="dot dot3"></span></a>
+      </div>
+    </div>
+    <div class="nav-btn">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+
+    <div class="nav-links">
+      <a href="#about">A propos</a>
+      <a href="#articles">Articles</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+
+<div class="page-content">
+  {{{body}}}
+</div>
+</body>
+
 </html>
