--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,9 @@
     Allô bonjour c'est l'index
 </div>
 
+<img src="/../public/images/welcome.png" alt="CLEMENTINE PARANT" width="100%">
+
+
 <div>Lorem ipsum 1 dolor sit amet consectetur, adipisicing elit. Ab, quaerat reprehenderit, quisquam minima saepe
     dignissimos nisi suscipit assumenda, quibusdam possimus adipisci maiores iure laborum expedita necessitatibus alias?
     Voluptas, nihil tempore.</div>
