--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,11 +11,10 @@ html {
 *,
 *:before,
 *:after {
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
-  padding: 10px;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
   line-height: 1.5;
@@ -47,7 +46,7 @@ h3 {
   font-size: 24px
 }
 
-.dot {
+.dots {
   height: 12px;
   width: 12px;
   border-radius: 50%;
@@ -138,9 +137,12 @@ h3 {
   display: none;
 }
 
-@media (max-width:6 00px) {
+@media (max-width:600px) {
 
-  
+  .hide-small {
+    display: none !important
+  }
+
   .nav>.nav-btn {
     display: inline-block;
     position: absolute;
@@ -195,7 +197,116 @@ h3 {
   }
 }
 
+
+/* INDEX PAGES  */
+
+
 .page-content {
-  top: 50px;
+  top: 60px;
   position: relative;
+  padding: 20px;
 }
+
+
+
+
+/* NAVBAR W3 :::::  */
+/* vvvvvvvvvvvvvvv */
+.top,
+.bottom {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  top: 0
+}
+
+
+.bar {
+  width: 100%;
+  overflow: hidden;
+  display: inline-block;
+  width: auto;
+  position: static;
+  float: left;
+}
+
+.bar .bar-item {
+  padding: 8px 16px;
+  float: left;
+  width: auto;
+  border: none;
+  display: block;
+  outline: 0
+}
+
+
+
+.bar .button {
+  white-space: normal
+}
+
+.bar-item {
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+  text-align: center;
+}
+
+.white {
+  color: #000 !important;
+  background-color: #fff !important
+}
+
+.padding {
+  padding: 8px 16px !important
+}
+
+.card {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+}
+
+
+.btn,
+.button {
+  border: none;
+  display: inline-block;
+  padding: 8px 16px;
+  vertical-align: middle;
+  overflow: hidden;
+  text-decoration: none;
+  color: inherit;
+  background-color: inherit;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap
+}
+
+.btn:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+.btn,
+.button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none
+}
+
+.right {
+  float: right !important
+}
+
+.hide-small {
+  display: none !important
+}
+
+/* ^^^^^^^^^^^^^^^ */
+/* NAVBAR W3 :::::  */
